--- a/styles/style.css
+++ b/styles/style.css
@@ -3,3 +3,137 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  font-family: "Inter", sans-serif;
+  font-size: 1.375rem;
+  color: rgba(0, 0, 0, 0.5);
+  /* font-family: "Noto Serif", serif; */
+}
+
+img {
+  display: block;
+}
+
+/* Common Styles */
+
+.common-dimensions {
+  max-width: 79.166vw; /* Assuming device dimensions 1440 X 900 and calculating width and height accordingly*/
+  margin: 0 auto;
+}
+
+a {
+  text-decoration: none;
+  color: rgba(137, 135, 161, 1);
+}
+
+li {
+  list-style: none;
+}
+
+/* Header Section Styles */
+
+.header-container {
+  margin-top: 3.33vh;
+}
+
+/* Nav bar Section Styles */
+
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu-container {
+  color: rgba(137, 135, 161, 1);
+  font-size: 1.125rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 3.33vw;
+}
+
+.menu {
+  color: rgba(137, 135, 161, 1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 3.33vw;
+}
+
+.menu span {
+  color: rgba(37, 36, 50, 1);
+  font-weight: 700;
+}
+
+.shopping-cart span {
+  color: rgba(0, 0, 0, 1);
+}
+
+/* Banner Section Styles */
+
+.banner {
+  margin-top: 13.33vh;
+  padding-top: 11.78vh;
+  display: flex;
+  align-items: end;
+}
+
+.banner-info {
+  width: 50%;
+}
+
+.banner-info h1 {
+  font-family: "Noto Serif", serif;
+  color: rgba(0, 0, 0, 1);
+  font-size: 4rem;
+  font-weight: 700;
+}
+
+.banner-info span {
+  color: rgba(233, 90, 8, 1);
+}
+
+.banner-img {
+  width: 50%;
+}
+
+/* Mobile Responsive Styles */
+
+@media screen and (max-width: 767px) {
+  .common-dimensions {
+    max-width: 100vw;
+    margin: 5vh 5vw;
+  }
+
+  .nav-bar img {
+    width: 16vw;
+  }
+
+  .menu {
+    display: none;
+  }
+
+  .banner {
+    margin: 0 0;
+    flex-direction: column-reverse;
+  }
+
+  .banner-info {
+    margin-top: 5vh;
+    width: 100%;
+  }
+
+  .banner-img {
+    width: 100%;
+  }
+
+  .banner-img img {
+    max-width: 100vw;
+  }
+
+  .banner-info h1 {
+    font-size: 2rem;
+  }
+}
