--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,6 @@ body {
   font-family: "Inter", sans-serif;
   font-size: 1.375rem;
   color: rgba(0, 0, 0, 0.5);
-  /* font-family: "Noto Serif", serif; */
 }
 
 img {
@@ -48,15 +47,6 @@ li {
   color: white;
   font-weight: 600;
   padding: 2vh 5vw;
-}
-
-.bg-opacity {
-  border-image-source: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0.4),
-    rgba(0, 0, 0, 0.4)
-  );
-  border-image-slice: fill 1;
 }
 
 /* Header Section Styles */
@@ -128,13 +118,13 @@ li {
 .banner-img img {
   width: 100%;
 }
+
 /* Main Section Styles */
 
 /* Our Plants Section Styles */
 
 .our-plants-container {
   margin-top: 13.33vh;
-  /* text-align: center; */
   display: flex;
   flex-direction: column;
   gap: 5.5vh;
@@ -192,16 +182,25 @@ li {
   gap: 5.25vw;
 }
 
-.flower-store-img {
+.flower-store-img-container {
+  max-width: 50%;
   position: relative;
 }
 
+.flower-store-img {
+  width: 100%;
+}
+
 .badge {
-  width: 22vw;
+  width: 50%;
   position: absolute;
   top: 0;
   right: 0;
-  transform: translate(40%, -40%);
+  transform: translate(35%, -45%);
+}
+
+.flower-store-info {
+  max-width: 50%;
 }
 
 .flower-store-info > ul {
@@ -325,7 +324,6 @@ li {
 }
 
 .latest-deal-zabo {
-  /* padding: 14% 10%; */
   width: 100%;
   background-image: linear-gradient(
     to bottom,
@@ -355,12 +353,49 @@ li {
   color: white;
 }
 
+/* Newsletter Section Styles */
+
+.newsletter-container {
+  max-width: 100vw;
+  height: auto;
+  margin-top: 13.33vh;
+  padding: 22vh 21vw;
+  background: url("../assets/news-letter-bg.png") center / cover no-repeat;
+}
+
+.newsletter {
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2.5vh;
+}
+
+.newsletter h2 {
+  color: white;
+}
+
+.newsletter-subscription {
+  width: 100%;
+  display: flex;
+}
+
+.newsletter-email {
+  padding: 2vh 2vw;
+  border: none;
+  flex: 1;
+}
+
 /* Mobile Responsive Styles */
 
 @media screen and (max-width: 767px) {
   body {
     font-size: 0.875rem;
   }
+
+  /* Common Mobile Styles */
+
   .common-dimensions {
     max-width: 95vw;
     margin: 5vh 5vw;
@@ -370,6 +405,8 @@ li {
     font-size: 1.5rem;
   }
 
+  /* Navbar Mobile Styles */
+
   .nav-bar img {
     width: 16vw;
   }
@@ -377,6 +414,8 @@ li {
   .menu {
     display: none;
   }
+
+  /* Banner Mobile Styles */
 
   .banner {
     margin: 0 0;
@@ -400,6 +439,8 @@ li {
     font-size: 2rem;
   }
 
+  /* Our Plants Mobile Styles */
+
   .our-plants-container {
     margin-top: 10vh;
   }
@@ -417,6 +458,8 @@ li {
     font-size: 1rem;
   }
 
+  /* Flower Store Mobile Styles */
+
   .flower-store-container {
     display: flex;
     flex-direction: column;
@@ -425,11 +468,11 @@ li {
     gap: 5.25vw;
   }
 
-  .flower-store-img {
+  .flower-store-img-container {
     max-width: 100%;
   }
 
-  .flower-store-img > img {
+  .flower-store-img {
     width: 100%;
     object-fit: cover;
   }
@@ -438,18 +481,15 @@ li {
     display: none;
   }
 
+  .flower-store-info {
+    max-width: 100%;
+  }
+
   .flower-store-info > ul {
     padding-left: 5vw;
   }
 
-  .flower-store-img {
-    width: 100%;
-  }
-
-  .flower-store-img img {
-    width: 100%;
-    object-fit: cover;
-  }
+  /* Latest Deals Mobile Styles */
 
   .latest-deals-container {
     gap: 10vh;
@@ -470,8 +510,6 @@ li {
   .latest-deal-zabo-container {
     flex: 1;
     max-width: 100%;
-    /* flex: 1; */
-    /* padding: 20% 10%; */
   }
 
   .latest-deal-zabo-container {
@@ -483,8 +521,6 @@ li {
   .latest-deal-zabo {
     flex: 1;
     width: 100%;
-    /* flex: 1; */
-    /* padding: 20% 10%; */
   }
 
   .latest-deal-zabo {
@@ -514,5 +550,11 @@ li {
   .latest-deal-bloom h4,
   .latest-deal-ana h4 {
     margin-bottom: 20%;
+  }
+
+  /* Newsletter Mobile Styles */
+
+  .newsletter-container {
+    padding: 11vh 10vw;
   }
 }
